--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,16 +15,16 @@ android {
         applicationId "com.gayyedfam.grainsmartkarga"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "2"
+        versionCode 4
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            shrinkResources false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
