--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.gayyedfam.grainsmartkarga"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 10
-        versionName "1.8"
+        versionCode 11
+        versionName "1.9"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,11 +35,13 @@ android {
             dimension "environment"
             buildConfigField("String", "AD_MOB_BANNER_ID", "\"ca-app-pub-3940256099942544/6300978111\"")
             buildConfigField("String", "AD_MOB_FULL_AD_ID", "\"ca-app-pub-3940256099942544/1033173712\"")
+            buildConfigField("String", "FB_BANNER_PLACEMENT_ID", "\"IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID\"")
         }
         prod {
             dimension "environment"
             buildConfigField("String", "AD_MOB_BANNER_ID", "\"ca-app-pub-1965212949581065/9341702278\"")
             buildConfigField("String", "AD_MOB_FULL_AD_ID", "\"ca-app-pub-1965212949581065/9121268478\"")
+            buildConfigField("String", "FB_BANNER_PLACEMENT_ID", "\"855092645015247_855093418348503\"")
         }
     }
 
@@ -110,10 +112,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
     implementation 'com.google.firebase:firebase-analytics-ktx:17.4.4'
     implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
 
     implementation 'com.bugfender.sdk:android:3.+'
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
 
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'com.facebook.android:facebook-share:[5,6)'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:5.11.0'
 }
